<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>backpack_mapping</name>
  <version>0.0.1</version>
  <description>The backpack_mapping package</description>
  <maintainer email="william.dubois.4@ulaval.ca">William Dubois</maintainer>
  <license>BSD-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>